==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/adc/implementation_4/subimplementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_ADC_ADON_BIT                    0
#define HAL_ADC_SR_EOC_BIT                  1
#define HAL_ADC_CONT_BIT                    1
#define HAL_ADC_CAL_BIT                     2
#define HAL_ADC_RSTCAL_BIT                  3
#define HAL_ADC_SCAN_BIT                    8
#define HAL_ADC_ALIGN_BIT                   11
#define HAL_ADC_SWSTART_BIT                 22
#define HAL_ADC1_ENABLE_CLOCK               9
#define HAL_ADC2_ENABLE_CLOCK               10
#define HAL_ADC3_ENABLE_CLOCK               15
#define HAL_ADC_SCAN                        0xFFF0FEFFul
#define HAL_ADC_EXTSEL                      0x000E0000ul
#define HAL_ADC_DUALMOD                     0xFFF0FFFFul
#define HAL_ADC_CLEAR_MASK                  0xFFF0F7FDul
#define HAL_ADC_CONVERSION_ONE              0x0000001Ful
#define HAL_ADC_SEQUENCE_LENGTH_MASK        0xFF0FFFFFul

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_adc_base_handle_t *base = ( hal_ll_adc_base_handle_t * )hal_ll_adc_hw_specifics_map_local->base;

    base->sqr1 &= ~HAL_ADC_CONVERSION_ONE;
    base->sqr3 = hal_ll_adc_hw_specifics_map_local->channel;

    set_reg_bit( &( base->cr2 ), HAL_ADC_ADON_BIT );
    set_reg_bit( &( base->cr2 ), HAL_ADC_SWSTART_BIT );

    // The application should allow a delay of tSTAB between power up and start of conversion.
    Delay_1us();

    while ( !( check_reg_bit( &( base->sr ), HAL_ADC_SR_EOC_BIT ) ) );
    *readDatabuf = base->dr;

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin, hal_ll_adc_pin_id *index, hal_ll_adc_handle_register_t *handle_map )
{
    static const uint16_t     adc_map_size = ( sizeof( _adc_map ) / sizeof( hal_ll_adc_pin_map_t ) );
    uint16_t     pin_index = 0;
    uint8_t      index_counter = 0;
    uint8_t      hal_ll_module_id = 0;

    if ( pin == HAL_LL_PIN_NC )
    {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ )
    {
        if ( pin == _adc_map[pin_index].pin )
        {
            // Get module number
            hal_ll_module_id = _adc_map[pin_index].module_index;
            // Map pin name
            index->pin_an[hal_ll_module_id] = pin_index;

            // Check if module is taken
            if ( NULL == handle_map[ hal_ll_module_id ].hal_drv_adc_handle ) {
                return hal_ll_module_id;
            } else if ( ADC_MODULE_COUNT == ++index_counter ) {
                return --index_counter;
            }
        }
    }

    if ( index_counter ) {
        return hal_ll_module_id;
    } else {
        return HAL_LL_PIN_NC;
    }
}

static void _hal_ll_adc_hw_init( hal_ll_adc_base_handle_t *base )
{
    // Disable ADC.
    clear_reg_bit( &( base->cr2 ), HAL_ADC_ADON_BIT );

    // Clear SCAN bits.
    base->cr1 &= HAL_ADC_SCAN;

    // Clear CONT, ALIGN bits.
    base->cr2 &= HAL_ADC_CLEAR_MASK;

    // Independent mode.
    #if defined(STM32F1xx)
    base->cr1 &= HAL_ADC_DUALMOD;
    #endif

    // Scan mode disabled.
    clear_reg_bit( &( base->cr1 ), HAL_ADC_SCAN_BIT );

    // Single conversion mode.
    clear_reg_bit( &( base->cr2 ), HAL_ADC_CONT_BIT );

    // Data alighment = right.
    clear_reg_bit( &( base->cr2 ), HAL_ADC_ALIGN_BIT );

    // Conversion on external event disabled.
    base->cr2 |= HAL_ADC_EXTSEL;

    // Regular channel sequence length 0000: 1 conversion.
    base->sqr1 &= HAL_ADC_SEQUENCE_LENGTH_MASK;

    // Enable ADC.
    set_reg_bit( &( base->cr2 ), HAL_ADC_ADON_BIT );

    // Enable ADC1 reset calibration register.
    set_reg_bit( &( base->cr2 ), HAL_ADC_RSTCAL_BIT );
    while ( ( check_reg_bit( &( base->cr2 ), HAL_ADC_RSTCAL_BIT ) ) );

    // Start ADC1 calibration.
    set_reg_bit( &( base->cr2 ), HAL_ADC_CAL_BIT );
    while ( ( check_reg_bit( &( base->cr2 ), HAL_ADC_CAL_BIT ) ) );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_analog_input( hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) ),
                                                     hal_ll_gpio_pin_mask( map->pin ) );

    _hal_ll_adc_enable_clock( map->module_index );

    _hal_ll_adc_hw_init((hal_ll_adc_base_handle_t *)map->base);

}
